2010-08-22 :
- Initial release to github.com : http://github.com/depesz/Versioning