@@ -1,18 +1,0 @@
-Versioning
-
-This project strives to provide simple way to manage changes to
-database.
-
-Instead of making changes on development server, then finding
-differences between production and development, deciding which ones
-should be installed on production, and finding a way to install them -
-you start with writing diffs themselves!
-
-More detailed description is (so far) in here:
-http://www.depesz.com/index.php/2010/08/22/versioning/
-
-To install versioning simply run install.versioning.sql in your database
-(all of them: production, stage, test, devel, ...).
-
-If you'd like to suggest new functionality or ask anything - please use
-contact form on http://www.depesz.com/
